fix chart spacing on mobile

--- a/webapp/src/components/NFTPage/DNAChart/DNAChart.css
+++ b/webapp/src/components/NFTPage/DNAChart/DNAChart.css
@@ -38,7 +38,6 @@
 
 @media (max-width: 425px) {
   .dna-container {
-    width: 390px;
     padding: 25px 5px 5px 5px;
     height: auto;
   }
@@ -46,7 +45,6 @@
 
 @media (max-width: 375px) {
   .dna-container {
-    width: 350px;
     padding: 25px 5px 5px 5px;
     height: auto;
   }
@@ -54,7 +52,6 @@
 
 @media (max-width: 320px) {
   .dna-container {
-    width: 290px;
     padding: 25px 5px 5px 5px;
     height: auto;
   }
